@@ -1,26 +1,27 @@
 # Copyright (c) 2018 Patricio Cubillos and contributors.
 # puppies is open-source software under the MIT license (see LICENSE).
 
+import os
+import sys
+
 from .mandeltr  import *
-from .mandelecl import *
-from .linramp   import *
-from .quadramp  import *
-from .expramp   import *
+from .ramps     import *
 from .bliss     import *
+sys.path.append(os.path.dirname(os.path.realpath(__file__))
+                + "/../../modules/eclipse/")
+from eclipse import *
 
 from .mandeltr  import __all__ as mtall
-from .mandelecl import __all__ as meall
-from .linramp   import __all__ as lrall
-from .quadramp  import __all__ as qrall
-from .expramp   import __all__ as erall
+from eclipse    import __all__ as eall
+from .ramps     import __all__ as rall
 from .bliss     import __all__ as biall
 
 # Astrophysical:
-__all__ = (meall + mtall
+__all__ = (mtall + eall
 # Ramps:
-           + lrall + qrall + erall
+         + rall
 # Pixel maps:
-           + biall)
+         + biall)
 
 
 # Clean up top-level namespace--delete everything that isn't in __all__
